# AI-Manager

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.ai-management/: projects.json
configs/: models.example.yaml  workspace.example.yaml
docs/: ARCHITECTURE.md  UGREEN_NAS.md
src/ai_management/: __init__.py  cli.py  models.py  projects.py  registry.py  security.py  server.py  web.py
src/ai_management/web_assets/static/: app.css
src/ai_management/web_assets/templates/: base.html  dashboard.html  login.html  models.html  projects.html  registry.html
